samples/_failures_safe/1761300462_e77cd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c64e52d1.c: In function ‘main’:
./samples/SAFE/__tmp_c64e52d1.c:157:5: error: expected declaration or statement at end of input
  157 |     }
      |     ^
